<resources>
    <string name="app_name">Space Shooter</string>
    <string name="how_to_play">How to Play</string>
    <string name="start_game">Start Game</string>
    <string name="login">Login</string>
    <string name="email">Email</string> />
    <string name="password">Password</string>
    <string name="Login">Login</string> />
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>

</resources>