<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".login">


 <TextView
     android:text="@string/login"
     android:textSize="28sp"
     android:layout_marginBottom="28dp"
     android:textStyle="bold"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#CCFFFFFF"
     />

 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">


  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/email"
      android:hint="@string/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#CCFFFFFF"
      android:textStyle="bold"/>
 </com.google.android.material.textfield.TextInputLayout>

 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">


  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#CCFFFFFF"
      android:textStyle="bold"
      android:hint="@string/password" />
 </com.google.android.material.textfield.TextInputLayout>

 <ProgressBar
     android:id="@+id/progressBar"
     android:visibility="gone"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />

 <Button
     android:id="@+id/btn_login"
     android:text="@string/login"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />

 <TextView
     android:id="@+id/registerNow"
     android:textSize="20sp"
     android:textStyle="bold"
     android:layout_marginTop="40sp"
     android:gravity="center"
     android:text="@string/click_to_register"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#CCFFFFFF"/>

</LinearLayout>
